// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly done todo 1`] = `
<li
  className="todo-li existing-todo"
  onAnimationEnd={[Function]}
>
  <label
    className="todo-item"
    info="Done at 12:49 2022-07-13"
  >
    <label
      className="todo-item-checkbox"
    >
      <div
        className="todo-item-text"
      >
        already done this
      </div>
      <input
        className="status-checkbox"
        defaultChecked="checked"
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="status-checkbox-mark"
      />
    </label>
  </label>
  <button
    className="delete-todo-button btn"
    onClick={[Function]}
  >
    <i
      className="fa fa-trash"
    />
  </button>
</li>
`;

exports[`renders correctly pending todo 1`] = `
<li
  className="todo-li existing-todo"
  onAnimationEnd={[Function]}
>
  <label
    className="todo-item"
    info=""
  >
    <label
      className="todo-item-checkbox"
    >
      <div
        className="todo-item-text"
      >
        do this
      </div>
      <input
        className="status-checkbox"
        defaultChecked=""
        onClick={[Function]}
        type="checkbox"
      />
      <span
        className="status-checkbox-mark"
      />
    </label>
  </label>
  <button
    className="delete-todo-button btn"
    onClick={[Function]}
  >
    <i
      className="fa fa-trash"
    />
  </button>
</li>
`;
